# web_base_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: default.json  dev.json
src/: main.rs
src/app/: hello.rs  mod.rs
src/app/api/: README.md
src/app/data/: README.md
src/config/: db.rs  mod.rs
src/lib/app/: mod.rs
src/lib/db/: mod.rs
src/routers/: hello.rs  mod.rs
test/: hello.http
