[package]
name = "web_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"

axum = { version = "0.5.7", features = ["headers"]}

tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
tower-service = "0.3.1"

# 数据库
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "mysql" ] }
# redis 数据库
redis = { version = "0.21", features = ["tokio-comp"] }
deadpool-redis = { version = "0.10.2", features = ["serde"] }